--- a/docroot/themes/iucn_who/less/theme/benefits.less
+++ b/docroot/themes/iucn_who/less/theme/benefits.less
@@ -159,6 +159,7 @@
     h3 {
       font-size: 17 / unit(@map-sidebar-font-size) * 1em;
       margin: 0;
+      margin-right: auto;
       + div {
         font-weight: 300;
       }
